Fix contact list off-centered formatting

--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -52,16 +52,16 @@ a.contact-row {
   text-decoration: none;
   width: 100%;
   border-bottom: 1px solid $bulgarian-red;
-  padding: 5px;
 
   .name {
     padding-left: 10px;
-    line-height: 50px;
+    line-height: 60px;
     vertical-align: center;
     float: left;
   }
 
   .picture {
+    padding: 5px;
     height: 50px;
     float: left;
   }
